--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "onnxruntime-web": "^1.22.0",
     "rxjs": "~7.8.0",
+    "serve": "^14.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
